@@ -5,11 +5,17 @@ mkdir configs/
 cat << EOF > configs/generated_config.yml
 {% raw -%}
 version: 2.1
+
+parameters:
+  mobile_lane:
+    type: string
+    default: ""
+
 jobs:
   node:
     working_directory: ~/build
     docker:
-      - image: cimg/node:14.19
+      - image: cimg/node:18.16.0
     steps:
       - checkout
 
@@ -55,15 +61,70 @@ jobs:
           command: bash .circleci/webhook_callback.sh "failure"
           when: on_fail
 
-  android:
+  appetize:
     working_directory: ~/build
     docker:
-      - image: reactnativecommunity/react-native-android:3.2
+      - image: reactnativecommunity/react-native-android:5.4
     resource_class: "medium+"
     environment:
       - TERM: "dumb"
       - ADB_INSTALL_TIMEOUT: 10
-      - _JAVA_OPTIONS: "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+      - _JAVA_OPTIONS: "-XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport"
+      - GRADLE_OPTS: '-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs="-XX:+HeapDumpOnOutOfMemoryError"'
+      - BUILD_THREADS: 2
+    steps:
+      - checkout:
+          path: ~/build
+
+      - attach_workspace:
+          at: ~/build
+
+      - restore_cache:
+          key: bundle-v1-{{ checksum "Gemfile.lock" }}-{{ arch }}
+
+      - run:
+          command: bundle install
+
+      - save_cache:
+          key: bundle-v1-{{ checksum "Gemfile.lock" }}-{{ arch }}
+          paths:
+            - vendor/bundle      
+
+      - run:
+          name: Populate EnvFile
+          command: env >> .env
+          
+      - run:
+          name: Add my-upload-key.keystore file
+          working_directory: android
+          command:  |
+            cd app
+            echo "$MYAPP_UPLOAD_STORE_FILE" | base64 --decode > my-upload-key.keystore
+
+      - run:
+          name: Build and upload to appetize.io
+          command: bundle exec fastlane deploy_appetize
+          working_directory: android
+
+      - run:
+          name: Webhook Success
+          command: bash .circleci/webhook_callback.sh "success"
+          when: on_success
+
+      - run:
+          name: Webhook Failed
+          command: bash .circleci/webhook_callback.sh "failure"
+          when: on_fail
+
+  android:
+    working_directory: ~/build
+    docker:
+      - image: reactnativecommunity/react-native-android:6.2
+    resource_class: "medium+"
+    environment:
+      - TERM: "dumb"
+      - ADB_INSTALL_TIMEOUT: 10
+      - _JAVA_OPTIONS: "-XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport"
       - GRADLE_OPTS: '-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs="-XX:+HeapDumpOnOutOfMemoryError"'
       - BUILD_THREADS: 2
     steps:
@@ -109,20 +170,54 @@ jobs:
             echo "$ANDROID_KEYSTORE" | base64 --decode > upload-key.keystore
 
       - run:
-          name: Build and upload to appetize.io
-          command: bundle exec fastlane deploy_appetize
+          name: Add key.json file
+          working_directory: android
+          command:  |
+            echo "$GOOGLE_PLAY_CONSOLE_API_KEY" | base64 --decode > key.json
+
+      - run:
+          name: Add my-upload-key.keystore file
+          working_directory: android
+          command:  |
+            cd app
+            echo "$MYAPP_UPLOAD_STORE_FILE" | base64 --decode > my-upload-key.keystore
+
+      - run:
+          name: Create a new Android app bundle build
+          command: |
+            if [ $MOBILE_LANE == "internal" ]; then
+              bundle exec fastlane build_aab
+            fi
           working_directory: android
 
       - store_artifacts:
           path: android/app/build/outputs/apk/release/app-release.apk
 
-      - run:
-          name: create a new android app bundle build
-          command: bundle exec fastlane build_aab
-          working_directory: android
-
       - store_artifacts:
           path: android/app/build/outputs/bundle/release/app-release.aab
+
+      - run:
+          name: Create and push a new $MOBILE_LANE build to Play Store
+          command: bundle exec fastlane $MOBILE_LANE
+          working_directory: android
+
+
+      - run:
+          name: get android metadata
+          command:  |
+            if [ $MOBILE_LANE == "production" ]; then
+              git config --global user.email "team@crowdbotics.com"
+              git config --global user.name "Crowdbotics"
+              rm -rf fastlane/metadata
+              git add fastlane/metadata
+              git commit -m "CI Work: remove metadata and screenshots to download new one"
+              git push -q https://$GITHUB_WRITE_TOKEN@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME.git master
+              bundle exec fastlane supply init
+              git add fastlane/metadata app/build.gradle fastlane/README.md
+              git commit -m "CI Work: metadata and screenshots updated"
+              git push -q https://$GITHUB_WRITE_TOKEN@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME.git master
+            fi
+          working_directory: android
 
       - run:
           name: Webhook Success
@@ -136,7 +231,20 @@ jobs:
 
 workflows:
   version: 2.1
+  node-appetize:
+    when: 
+      equal: [ deploy_appetize, << pipeline.parameters.mobile_lane >> ]
+    jobs:
+      - node
+      - appetize:
+          requires:
+            - node
   node-android:
+    when: 
+      or:
+        - equal: [ internal, << pipeline.parameters.mobile_lane >> ]
+        - equal: [ beta, << pipeline.parameters.mobile_lane >> ]
+        - equal: [ production, << pipeline.parameters.mobile_lane >> ]
     jobs:
       - node
       - android:
